--- a/vectra-connector/Dockerfile
+++ b/vectra-connector/Dockerfile
@@ -6,5 +6,5 @@ RUN cd app && pip install -r requirements.txt
 
 WORKDIR /app
 
-RUN chmod +x run_docker.sh
-ENTRYPOINT "./run_docker.sh"
+RUN chmod +x /app/run_docker.sh
+ENTRYPOINT "/app/run_docker.sh"
