update to point to the container with triaged filter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     networks:
       - vectra-saas
     container_name: vectra
-    image: tmevectra/vectra-saas-siem-connector
+    image: tmevectra/vectra-saas-siem-connector:no_triage
     restart: always
     depends_on: 
       rabbitmq:
