--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       rabbitmq:
         condition: service_started
     environment:
+      HTTP_PROXY: https://<PROXY_IP>:<PORT>
       BASE_URL: <BASE_URL>
       CLIENT_ID: <VECTRA_CLIENT_ID>
       CLIENT_SECRET: <VECTRA_CLIENT_SECRET>
